--- a/requirements.txt
+++ b/requirements.txt
@@ -171,6 +171,7 @@ watchdog==6.0.0
 wcwidth @ file:///home/conda/feedstock_root/build_artifacts/wcwidth_1733231326287/work
 weasel==0.4.1
 websocket-client==1.8.0
+wordcloud==1.9.4
 wrapt==1.17.2
 wsproto==1.2.0
 xxhash==3.5.0
